# video-platform-apps-

./: .gitignore
backend/: .dockerignore  .env.sample  compose.yml  pyproject.toml  start.py
backend/Docker/: Dockerfile  Dockerfile.nginx  default.conf
backend/server/: main.py
backend/server/app/modules/auth/: auth_controller.py  auth_route.py  auth_service.py
backend/server/app/modules/user/: user_controller.py  user_model.py  user_route.py  user_service.py
backend/server/config/: env.py
backend/server/constants/: http_status_code.py
backend/server/db/: db_connection.py  model.py
backend/server/error/: exceptions_error.py  global_error.py  json_error_handler.py
backend/server/helper/: otp.py  otp_send_on_mail.py
backend/server/routes/: api_router_v1.py
backend/server/templates/: home_template.py  otp_template.py
backend/server/utils/: crypto_context.py  send_res.py  time_stamp.py
mobile/: package-lock.json  package.json
mobile/app/(tabs)/: index.tsx
