[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==3.2.0",
    "cffi==1.17.1",
    "click==8.2.1",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "fastapi==0.115.12",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "idna==3.10",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "passlib==1.7.4",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pymongo==4.13.0",
    "python-dotenv==1.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.34.3",
]
